fix: alignment issue on success page

--- a/src/pages/home/components/Form/‌Body/styles.module.css
+++ b/src/pages/home/components/Form/‌Body/styles.module.css
@@ -4,4 +4,5 @@
   max-width: 85%;
   margin: auto;
   border-radius: 0.5rem;
+  height: 100%;
 }
