--- a/src/pages/home/components/Steps/Success/styles.module.css
+++ b/src/pages/home/components/Steps/Success/styles.module.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   gap: 1rem;
   align-items: center;
+  height: 100%;
+  justify-content: center;
 }
 
 .successStep h3 {
